# my-navi-app

./: CMakeLists.txt  ROUTE_MOVEMENT_TEST_SUMMARY.md  TEST_ROUTE_MOVEMENT.md  backend.cpp  frontend.html  index.html  readme.md  test-dynamic-route.html  test-route-movement.html  test-route-movement.js  to_to_list.txt
backup/: backend.cpp
include/: OSMHandler.hpp  graph.hpp  utils.hpp
src/: OSMHandler.cpp  graph.cpp  main.cpp  utils.cpp
